src/scss/sponsors.scss
@import "./base.scss";

main {
    background-color: var(--bg-0);
    color: var(--fg-0);
    padding: var(--pad);
    padding-top: max(6.5rem, var(--pad));
    transition: filter $nav-trans;
    min-height: 100vh;
    
    &[has-nav-open] {
        filter: brightness(75%);
    }
}

section {
    margin-top: 5rem;
}
h2 {
    font-size: var(--fs-70);
    margin-bottom: 4rem;
}

$card-padding: 1.5rem;

.card {
    --x: 0;
    --y: 0;
    margin-top: 4rem;
    
    img {
        display: block;
        max-height: 7rem;
        width: auto;
        max-width: 100%;
        margin-left: auto;
        margin-right: auto;
        margin-bottom: $card-padding;
    }
}

@media (min-width: $width-th-1) {
    .cards {
        display: flex;
        flex-wrap: wrap;
        justify-content: start;
        margin-left: -$card-padding;
        margin-top: -$card-padding;
        width: calc(100% + 2*$card-padding);
    }
    .cards > * {
        margin: $card-padding;
        flex-basis: 32ch;
        flex-grow: 1;
        flex-shrink: 1;
        min-width: 26ch;
        max-width: 36ch;
    }
    .perspective-box {
        perspective: 30rem;
    }
    .card {
        --scale: 1;

        display: block;
        transform-origin: center;
        transform-style: preserve-3d;
        // transition: transform 250ms ease;
        transform: 
            translateX(calc(var(--x) * 3%))
            translateY(calc(var(--y) * 3%))
            rotateY(calc(var(--x) * -5deg))
            rotateX(calc(var(--y) * 5deg));
        background-color: var(--bg-1);
        border-radius: $card-padding;
        padding: $card-padding;
        margin-top: 0;
    }
    
    .card.smooth {
        transition: transform 250ms ease;
    }
}

.card__body {
    h3 {
        font-size: var(--fs-60);
        a {
            text-decoration: none;
            // color: var(--accent-30);

            &::after {
                content: "\279C";
                display: inline-block;
                position: relative;
                opacity: .5;
                padding-left: .75ch;
                transition:
                    transform 150ms ease-out,
                    opacity 150ms ease-out;
            }
            &:hover::after {
                transform: translateX(.4ch);
                opacity: 1;
            }
        }
    }
    p {
        margin-top: 1em;
        text-align: justify;
    }
}

img.dark-bg {
    background-color: var(--dark-bg-1);
    border-radius: .7em;
}
img.light-bg {
    background-color: var(--light-bg-1);
    border-radius: .7rem;
}
img.padded {
    padding: .6em;
}
#logo-poli {
    border-radius: 5em;
    padding-right: .9em;
    // box-shadow: inset 0 0 .5em var(--accent-30);
}

